# neuro_sim

./: AGENTS.md  BACKLOG.md  README.md  ROADMAP.md  brain_model.py  brain_sagittal_inline_regions.html  environment.yml  main.py  main_gui.py  pyproject.toml  requirements.txt  run_gui.py
analysis/: reports.py
brain_core/: __init__.py
brain_core/analysis/: __init__.py  benchmark_loader.py  connectivity.py  information_flow.py  phase_locking.py  reports.py  signal_metrics.py  spectral.py
brain_core/anatomy/: __init__.py  atlases.py  connectome.py  regions.py
brain_core/cognition/: __init__.py  mapping.py
brain_core/experiments/: __init__.py  lesions.py  pharmacology.py  protocols.py
brain_core/networks/: __init__.py  delays.py  (+1 more)
brain_model/: __init__.py  activations.py  behavior.py  calibration.py  connectivity.py  gui.py  gui_app.py  gui_config.py  gui_forms.py  gui_layout.py  gui_menu.py  gui_results.py  gui_runner.py  gui_sections.py  gui_state.py  gui_styles.py  io.py  model.py  modules.py  oscillators.py  params.py  plasticity.py  plotting.py  qt_app.py  qt_config.py  qt_plotting.py  qt_results.py  qt_runner.py  qt_sections.py  qt_state.py  qt_styles.py  report.py  report_export.py  stimuli.py  validation.py
brain_viewer/: brain_viewer.md  mapping.py
configs/: brain_model_config_2026-05-28.json  cognitive_demo.yaml  default.yaml  go_nogo.yaml  multi_region_delay_demo.yaml  multi_region_delay_extended.yaml  n_back.yaml  roving_oddball_disorder_gaba.yaml  roving_oddball_healthy.yaml  roving_oddball_lesion_hippocampus.yaml  snn_hippocampus_demo.yaml  stroop.yaml
docs/: architecture_decision_records.md  bids_brain_imaging_requirements.md  bids_eeg_requirements.md  brain_axial_inline_regions.html  brain_coronal_inline_regions.html  brain_lateral_inline_regions.html  developer_quality_checks.md  docstring_typing_rollout_plan.md  docstring_typing_standard.md  english_polish_glossary.md  gui_defaults.json  index.html  multi_region_agent_guidelines.md  program_structure.md  pyside6_gui_migration_plan.md  snn_cosimulation_demo.md  todo.md  typing_docstring_audit.md  typing_docstring_progress.md  web_gui.html
scripts/: sync_web_defaults.py
tests/: test_atlas_connectome.py  test_config_schema.py  test_gui_dependencies_static.py  test_gui_layout_static.py  test_gui_state.py  test_lesions.py  test_multiscale_engine.py  test_neuromodulation.py  test_observation_and_analysis.py  test_plasticity_protocols.py  test_plotting_svg_and_interpretation.py  test_qt_config.py  test_qt_plot_presets.py  test_qt_plotting_static.py  test_qt_runner_static.py  test_qt_sections.py  test_scenarios.py  test_signal_metrics_modules.py  test_spiking_population_adapter.py  test_task_protocols_and_engine.py  test_task_stimulus_player.py  test_wilson_cowan_network.py
(+60 files in other folders)
