[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-sim"
version = "0.1.0"
description = "Mezoskopowy model dynamiki procesów poznawczych z oscylatorami Wilsona-Cowana"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.scripts]
neuro-sim = "brain_model.main:main"
neuro-sim-gui = "brain_model.gui:run_gui"

[tool.setuptools]
packages = ["brain_model"]
