[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-sim"
version = "0.1.0"
description = "Mezoskopowy model dynamiki procesów poznawczych z oscylatorami Wilsona-Cowana"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
]

[project.scripts]
neuro-sim = "main:main"
neuro-sim-gui = "brain_model.gui:run_gui"
neuro-sim-run = "brain_core.simulation.run:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["brain_model*", "brain_core*"]
