[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-sim"
version = "0.1.0"
description = "Mezoskopowy model dynamiki procesów poznawczych z oscylatorami Wilsona-Cowana"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  # Zależności symulacji, raportów i konfiguracji.
  "numpy>=1.24",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  # Desktopowe GUI jest budowane w oparciu o PySide6/Qt.
  "PySide6>=6.6",
]

[project.scripts]
neuro-sim = "main:main"
neuro-sim-gui = "brain_model.gui:run_gui"
neuro-sim-run = "brain_core.simulation.run:main"

[tool.setuptools]
py-modules = ["main", "main_gui"]

[tool.setuptools.packages.find]
include = ["brain_model*", "brain_core*"]


[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
show_column_numbers = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
exclude = [
  "^tests/",
  "^brain_model\\.py$",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"brain_core/**/*.py" = ["D"]
"brain_model/**/*.py" = ["D"]
"analysis/**/*.py" = ["D"]
"tests/**/*.py" = ["D"]
"main.py" = ["D"]
"main_gui.py" = ["D"]
"run_gui.py" = ["D"]
"brain_model.py" = ["D"]
"scripts/**/*.py" = ["D"]
"brain_viewer/**/*.py" = ["D"]
